--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Funny little triangle</h1>
+			<h1>Funny Little Triangle</h1>
 		</header>
 			<section id="content">
 				<canvas id="SierpinskiTriangle" data-processing-sources="SierpinskiTriangle.pde">
